--- a/pom.xml
+++ b/pom.xml
@@ -58,6 +58,10 @@
             <artifactId>spring-boot-starter-data-jpa</artifactId>
             <version>2.5.6</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-webflux</artifactId>
+        </dependency>
 
 
     </dependencies>
