Aviasales priceMap request implemented (see TravelStorageManagerApplicationTests.java for example)

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,16 +2,21 @@
 server.servlet.context-path=/travel-storage-manager
 spring.flyway.locations=classpath:db/migration
 spring.flyway.url=jdbc:postgresql://localhost:5432/travel_dev
-spring.flyway.user=travel_manager
+spring.flyway.user=manager
 spring.flyway.password=manager
 
 
 #logging.level.root=debug
 
 spring.datasource.url=jdbc:postgresql://localhost:5432/travel_dev
-spring.datasource.username=travel_manager
+spring.datasource.username=manager
 spring.datasource.password=manager
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.database=postgresql
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQL10Dialect
+
+api.aviasales.token=a80fd91856ccb09f85f961cfa5f55109
+api.aviasales.urls.cheap=https://api.travelpayouts.com/v1/prices/cheap?
+api.aviasales.urls.supportedRoutes=http://map.aviasales.ru/supported_directions.json?
+api.aviasales.urls.priceMap=http://map.aviasales.ru/prices.json?
 
