learning git actions

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,6 @@
-
 server.servlet.context-path=/travel-storage-manager
+server.port=8080
+
 spring.flyway.locations=classpath:db/migration
 spring.flyway.url=jdbc:postgresql://localhost:5432/travel_dev
 spring.flyway.user=manager
