--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,6 @@
     </parent>
     <groupId>com.summerdev</groupId>
     <artifactId>travel-storage-manager</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
     <packaging>war</packaging>
     <name>travel-storage-manager</name>
     <description>travel-storage-manager</description>
@@ -46,7 +45,7 @@
         <dependency>
             <groupId>org.flywaydb</groupId>
             <artifactId>flyway-core</artifactId>
-            <version>8.0.5</version>
+            <version>8.4.1</version>
         </dependency>
         <dependency>
             <groupId>org.springframework</groupId>
@@ -71,6 +70,7 @@
     </dependencies>
 
     <build>
+        <finalName>${project.artifactId}</finalName>
         <plugins>
             <plugin>
                 <groupId>org.springframework.boot</groupId>
