--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -12,7 +12,7 @@ on:
 jobs:
   build:
 
-    runs-on: ubuntu-latest, self-hosted
+    runs-on: [ubuntu-latest, self-hosted]
 
     steps:
     - uses: actions/checkout@v2
