--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -23,4 +23,4 @@ jobs:
         distribution: 'adopt'
         cache: maven
     - name: Build with Maven
-      run: mvn -B package -Dmaven.test.skip --file pom.xml
+      run: mvn -B package '-Dmaven.test.skip=true' --file pom.xml
