--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -22,5 +22,9 @@ jobs:
         java-version: '11'
         distribution: 'adopt'
         cache: maven
+    - name: Set up Maven
+      uses: stCarolas/setup-maven@v4.2
+      with:
+        maven-version: 3.8.2
     - name: Build with Maven
       run: mvn -B package '-Dmaven.test.skip=true' --file pom.xml
