--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -10,9 +10,28 @@ on:
     branches: [ master ]
 
 jobs:
-  build:
+  build-dev:
 
-    runs-on: [server-marowak, dev-marowak, self-hosted]
+    runs-on: dev-marowak
+
+    steps:
+    - uses: actions/checkout@v2
+    - name: Set up JDK 11
+      uses: actions/setup-java@v2
+      with:
+        java-version: '11'
+        distribution: 'adopt'
+        cache: maven
+    - name: Set up Maven
+      uses: stCarolas/setup-maven@v4.2
+      with:
+        maven-version: 3.8.2
+    - name: Build with Maven
+      run: mvn -B package '-Dmaven.test.skip=true' --file pom.xml
+      
+  build-server:
+
+    runs-on: server-marowak
 
     steps:
     - uses: actions/checkout@v2
