--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -32,5 +32,5 @@ jobs:
     - name: Build with Maven
       run: mvn -B package '-Dmaven.test.skip=true' --file pom.xml
 
-    - name: Build the docker-compose
-      run: docker-compose up -d
+   # - name: Build the docker-compose
+     # run: docker-compose up -d
