--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -27,4 +27,4 @@ jobs:
       with:
         maven-version: 3.8.2
     - name: Build with Maven
-      run: mvn -B package '-Dmaven.test.skip=true' --file pom.xml
+      run: mvn -B package -Pprod '-Dmaven.test.skip=true' --file pom.xml
