--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,20 +1,37 @@
-#runs: docker-compose -f /travel-storage-manager/docker-compose.yml up
-version: '3.3'
-services:
-  db:
-    image: postgres
-    environment:
-      POSTGRES_USER: manager
-      POSTGRES_PASSWORD: manager
-      POSTGRES_DB: travel_dev
-    ports:
-      - "5432:5432"
+version: '3.9'
 
-  backend:
-    depends_on:
-      - db
-    image: tomcat
-    volumes:
-      - ./target/travel-storage-manager.war
+services:
+
+  postgres-db:
+    container_name: db
+
+    image: postgres
+
+    environment:
+      POSTGRES_PASSWORD: manager
+      POSTGRES_USER: manager
+      POSTGRES_DB: travel_dev
+    #      ALLOW_IP_RANGE: "0.0.0.0/0"
+
     ports:
-      - '8080:8080'
+      - 5432:5432
+
+  tomcat-service:
+    container_name: backend
+    
+    image: tomcat:9.0
+
+    depends_on:
+      - postgres-db
+
+    environment:
+      TOMCAT_USERNAME: tomcat
+      TOMCAT_PASSWORD: tomcat
+    
+    volumes:
+      - ./target/travel-storage-manager.war:/usr/local/tomcat/webapps/travel-storage-manager.war
+
+    ports:
+      - 8080:8080
+
+
