--- a/.github/workflows/minikube.yml
+++ b/.github/workflows/minikube.yml
@@ -5,9 +5,29 @@ on:
   pull_request:
     branches: [ master ]
 jobs:
-  job1:
+  build:
+    runs-on: [ server-marowak ]
+    name: build jar
+
+    steps:
+      - uses: actions/checkout@v2
+      - name: Set up JDK 11
+        uses: actions/setup-java@v2
+        with:
+          java-version: '11'
+          distribution: 'adopt'
+          cache: maven
+      - name: Set up Maven
+        uses: stCarolas/setup-maven@v4.2
+        with:
+          maven-version: 3.8.2
+      - name: Build with Maven
+        run: mvn -B package '-Pprod' '-Dmaven.test.skip=true' --file pom.xml
+
+  deploy:
     runs-on: [server-marowak]
-    name: build and deploy to minikube
+    name: build image and deploy to minikube
+
     steps:
       - uses: actions/checkout@v2
       - name: Start minikube
@@ -24,7 +44,8 @@ jobs:
           docker images
       - name: Deploy to minikube
         run:
-          kubectl apply -f deploy-to-minikube.yaml
+          kubectl apply -f deployment-backend.yaml
+          kubectl apply -f deployment-db.yaml
       - name: Test service URLs
         run: |
           minikube service list
