--- a/.github/workflows/minikube.yml
+++ b/.github/workflows/minikube.yml
@@ -22,7 +22,7 @@ jobs:
         with:
           maven-version: 3.8.2
       - name: Build with Maven
-        run: mvn -B package '-Pprod' '-Dmaven.test.skip=true' --file pom.xml
+        run: mvn -B package '-Pdev' '-Dmaven.test.skip=true' --file pom.xml
 
   deploy:
     runs-on: [ server-marowak ]
