--- a/pom.xml
+++ b/pom.xml
@@ -85,6 +85,15 @@
                 <artifactId>flyway-maven-plugin</artifactId>
                 <version>8.0.0</version>
             </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <source>17</source>
+                    <target>17</target>
+                    <compilerArgs>--enable-preview</compilerArgs>
+                </configuration>
+            </plugin>
         </plugins>
     </build>
 
