#70 added config for docker deployment

--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -6,8 +6,7 @@ spring.flyway.url=jdbc:postgresql://postgres-db:5432/travel_dev
 spring.flyway.user=manager
 spring.flyway.password=manager
 
-
-#logging.level.root=debug
+logging.level.com.summerdev.travelstoragemanager = INFO
 
 spring.datasource.url=jdbc:postgresql://postgres-db:5432/travel_dev
 spring.datasource.username=manager
@@ -15,9 +14,3 @@ spring.datasource.password=manager
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.database=postgresql
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQL10Dialect
-
-api.aviasales.token=a80fd91856ccb09f85f961cfa5f55109
-api.aviasales.urls.cheap=https://api.travelpayouts.com/v1/prices/cheap?
-api.aviasales.urls.supportedRoutes=http://map.aviasales.ru/supported_directions.json?
-api.aviasales.urls.priceMap=http://map.aviasales.ru/prices.json?
-
