--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,11 +1,11 @@
 version: '2'
 
 services:
-  app:
+  travel-storage-manager:
     image: 'docker-spring-boot-postgres:latest'
     build:
       context: .
-    container_name: app
+    container_name: travel-storage-manager
     depends_on:
       - postgres-db
 
