#70 hid db credentials for prod(they are not the same)

--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -2,15 +2,12 @@ server.servlet.context-path=/travel-storage-manager
 server.port=8080
 
 spring.flyway.locations=classpath:db/migration
-spring.flyway.url=jdbc:postgresql://postgres-db:5432/travel_dev
-spring.flyway.user=manager
-spring.flyway.password=manager
 
-logging.level.com.summerdev.travelstoragemanager = INFO
+logging.level.com.summerdev.travelstoragemanager = DEBUG
 
-spring.datasource.url=jdbc:postgresql://postgres-db:5432/travel_dev
-spring.datasource.username=manager
-spring.datasource.password=manager
+spring.datasource.url=jdbc:postgresql://${TRAVEL_DB_URL}:5432/travel_dev
+spring.datasource.username=${TRAVEL_DB_USERNAME}
+spring.datasource.password=${TRAVEL_DB_PASSWORD}
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.database=postgresql
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQL10Dialect
